--- a/logging-in-spring/src/main/resources/application.properties
+++ b/logging-in-spring/src/main/resources/application.properties
@@ -7,13 +7,15 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-
 # Logging pattern for the console
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 # Logging pattern for file
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
-# Output to a file named application.log
-logging.file.name=application.log
+# Output to a file named application.log & store it to external folder
+logging.file.name=E:/application.log
+# Output to a file named application.log & store it to internal folder
+# logging.file.name=${user.dir}/application.log
 
-# Output to a file named spring.log in path
-logging.file.path=${user.dir}/src/main/resources/logging/
+logging.logback.rollingpolicy.max-history=7
+
+logging.logback.rollingpolicy.clean-history-on-start = true
